# C-433

./: README.md  lab7.c  lab8.c  lab9.c
lab10/: functions.c  functions.h  main.c  makefile
lab11/: lab11_2.c  lab11_3.c  lab11_4.c  task1.c
lab12/task0/: Makefile
lab12/task1/: CMakeLists.txt
lab2/: task1.c  task2.c  task3.c
lab3/: loops.c  loops2.c  loops3.c  loops4.c  loops5.c
lab4/: figures.c  figures1.c
lab5/: bo2.c  task1  task2.c
lab6/: task1&2.c  task1_1.c
